--- a/templates/nfo.html
+++ b/templates/nfo.html
@@ -41,6 +41,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/api">API</a>
         </li>
+                 <li class="nav-item">
+          <a class="nav-link" href="https://github.com/crackhub-dev/nfo-db" target="_blank">GitHub</a>
+        </li>
       </ul>
     </div>
   </div>
