--- a/templates/error.html
+++ b/templates/error.html
@@ -42,6 +42,9 @@
               <a class="nav-link" href="/api">API</a>
             </li>
             <li class="nav-item">
+          <a class="nav-link" href="/data">All NFOs</a>
+        </li>
+            <li class="nav-item">
           <a class="nav-link" href="https://github.com/crackhub-dev/nfo-db" target="_blank">GitHub</a>
         </li>
           </ul>
