--- a/templates/dirtree.html
+++ b/templates/dirtree.html
@@ -2,10 +2,12 @@
 <title>All NFOs</title>
 <h1>All NFOs</h1>
 <ul>
-{%- for item in tree.children recursive %}
-    <a href="/api/nfo/dl/{{ item.name }}"><li>{{ item.name }}</a>
+    {%- for item in tree.children recursive %}
+    <a href="/api/nfo/dl/{{ item.name }}">
+        <li>{{ item.name }}
+    </a>
     {%- if item.children -%}
-        <ul>{{ loop(item.children) }}</ul>
+    <ul>{{ loop(item.children) }}</ul>
     {%- endif %}</li>
-{%- endfor %}
+    {%- endfor %}
 </ul>
