--- a/templates/dirtree.html
+++ b/templates/dirtree.html
@@ -1,13 +1,68 @@
 <!doctype html>
-<title>All NFOs</title>
-<h1>All NFOs</h1>
-<ul>
-    {%- for item in tree.children recursive %}
-    <a href="/api/nfo/dl/{{ item.name }}">
-        <li>{{ item.name }}
-    </a>
-    {%- if item.children -%}
-    <ul>{{ loop(item.children) }}</ul>
-    {%- endif %}</li>
-    {%- endfor %}
-</ul>
+<html>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>All NFOs</title>
+    <style>
+        .form-control:disabled {
+            background-color: #303030 !important;
+        }
+    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='mdb.dark.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='all.min.css') }}" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">NFO DB</a>
+            <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fas fa-bars"></i>
+      </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/api">API</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/data">All NFOs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/crackhub-dev/nfo-db" target="_blank">GitHub</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <style>
+        ul {
+            list-style-type: none;
+        }
+    </style>
+    <div class="container text-center">
+        <h1>All NFOs</h1>
+
+        <ul>
+            {%- for item in tree.children recursive %}
+            <a href="/api/nfo/dl/{{ item.name }}">
+                <li>{{ item.name }}
+            </a>
+            {%- if item.children -%}
+            <ul>{{ loop(item.children) }}</ul>
+            {%- endif %}</li>
+            {%- endfor %}
+        </ul>
+    </div>
+</body>
+
+</html>
