--- a/templates/index.html
+++ b/templates/index.html
@@ -2,76 +2,74 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NFO Viewer</title>
-  <style>
-    .form-control:disabled {
-      background-color: #303030 !important;
-    }
-  </style>
-  <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}" />
-  <link rel="stylesheet" href="{{ url_for('static', filename='mdb.dark.min.css') }}" />
-  <link rel="stylesheet" href="{{ url_for('static', filename='all.min.css') }}" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>NFO Viewer</title>
+    <style>
+        .form-control:disabled {
+            background-color: #303030 !important;
+        }
+    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='mdb.dark.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='all.min.css') }}" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">NFO DB</a>
-      <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">NFO DB</a>
+            <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/api">API</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/data">All NFOs</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://github.com/crackhub-dev/nfo-db" target="_blank">GitHub</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <h1 style="text-align: center;">Submit NFO</h1>
-  <div class="container">
-    <form method=post enctype=multipart/form-data style="text-align: center;">
-      <input type=file name=file class="form-control mb-4" required id="nfo">
-      <div class="form-outline">
-        <input type="text" class="form-control" id="rls" name=rls required />
-        <label class="form-label" for="rls">Release Name</label>
-      </div>
-      <button type="submit" class="btn btn-primary mt-4">Upload</button>
-    </form>
-    <div class="d-flex justify-content-center mt-4">
-      <div class="dropdown">
-        <a class="btn btn-secondary dropdown-toggle " href="#" role="button" id="dropdownMenuLink"
-          data-mdb-toggle="dropdown" aria-expanded="false">
-          Random NFOs
-        </a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/api">API</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/data">All NFOs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/crackhub-dev/nfo-db" target="_blank">GitHub</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <h1 style="text-align: center;">Submit NFO</h1>
+    <div class="container">
+        <form method=post enctype=multipart/form-data style="text-align: center;">
+            <input type=file name=file class="form-control mb-4" required id="nfo">
+            <div class="form-outline">
+                <input type="text" class="form-control" id="rls" name=rls required />
+                <label class="form-label" for="rls">Release Name</label>
+            </div>
+            <button type="submit" class="btn btn-primary mt-4"><i class="fas fa-upload"></i> Upload</button>
+        </form>
+        <div class="d-flex justify-content-center mt-4">
+            <div class="dropdown">
+                <a class="btn btn-secondary dropdown-toggle " href="#" role="button" id="dropdownMenuLink" data-mdb-toggle="dropdown" aria-expanded="false">
+                    <i class="fas fa-random"></i> Random NFOs
+                </a>
 
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          {% for nfo in random_nfos %}
-          <li><a class="dropdown-item" href="/nfo/{{nfo}}">{{ nfo }}</a></li>
-          {% endfor %}
-        </ul>
-      </div>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    {% for nfo in random_nfos %}
+                    <li><a class="dropdown-item" href="/nfo/{{nfo}}">{{ nfo }}</a></li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
     </div>
-  </div>
 
-  <script src="{{ url_for('static', filename='mdb.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='mdb.min.js') }}"></script>
 </body>
 
 </html>
