--- a/templates/index.html
+++ b/templates/index.html
@@ -17,15 +17,18 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <script src="https://unpkg.com/counterup2@2.0.2/dist/index.js">
+    </script>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2 mr-auto justify-content-end ">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">NFO DB</a>
             <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
       </button>
+
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -44,10 +47,13 @@
             </div>
         </div>
     </nav>
+    <div class="counter">
+        <h6 class="text-center">Proudly Hosting <span class="text-primary">{{ number_nfos }}</span> NFOs!</h6>
+    </div>
     <h1 style="text-align: center;">Submit NFO</h1>
     <div class="container">
         <form method=post enctype=multipart/form-data style="text-align: center;">
-            <input type=file name=file class="form-control mb-4" required id="nfo">
+            <input type=file name=file class="form-control mb-4" required id="nfo" accept=".nfo">
             <div class="form-outline">
                 <input type="text" class="form-control" id="rls" name=rls required />
                 <label class="form-label" for="rls">Release Name</label>
@@ -68,7 +74,29 @@
             </div>
         </div>
     </div>
+    <script>
+        const counterUp = window.counterUp.default
 
+        const callback = entries => {
+            entries.forEach(entry => {
+                const el = entry.target
+                if (entry.isIntersecting && !el.classList.contains('is-visible')) {
+                    counterUp(el, {
+                        duration: 500,
+                        delay: 16,
+                    })
+                    el.classList.add('is-visible')
+                }
+            })
+        }
+
+        const IO = new IntersectionObserver(callback, {
+            threshold: 1
+        })
+
+        const el = document.querySelector('.counter')
+        IO.observe(el)
+    </script>
     <script src="{{ url_for('static', filename='mdb.min.js') }}"></script>
 </body>
 
